--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio Ieza Souza</title>
   </head>
   <body>
+    <div class="headercontent">
+      <div class="headerlogo">
+        <img src="img/programming (1).png" alt="logo" class="headerlogo" />
+      </div>
+    </div>
     <header>
-      <h1>Hello, my name is Ieza Souza I’m a Full Stack Web Developer</h1>
+      <h1 class="titulo1">
+        Hello, my name is Ieza Souza <br />
+        I’m a Full Stack Web Developer
+      </h1>
       <a href="#contact">Find out more</a>
     </header>
     <main>
