--- a/index.html
+++ b/index.html
@@ -26,45 +26,83 @@
     </header>
     <main>
       <section id="about" class="about">
-        <h2>About Me</h2>
-        <div>
-          <img
-            src="img/photo-1573495628363-04667cedc587.png"
-            style="width: 275px"
-            alt="IezaSouza"
-          />
+        <img
+          class="img-bio"
+          src="img/photo-1573495628363-04667cedc587.png"
+          alt="IezaSouza"
+        />
+        <div class="aboutme">
+          <h2>About Me</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
             hic perferendis consectetur amet minus, blanditiis dicta culpa
             beatae quibusdam perspiciatis neque tempora eum ut id saepe dolores!
             Tempora, cumque nihil!
           </p>
-          <a href=" . ">View resume</a>
+          <a href="Ieza Souza Curriculo English.pdf" target="_blank"
+            >View resume</a
+          >
+
+          <blockquote class="quote">
+            “Don't comment bad code - rewrite it.”
+          </blockquote>
+          <cite>Brian Kernighan</cite>
         </div>
-        <blockquote>“Don't comment bad code - rewrite it.”</blockquote>
-        <cite>Brian Kernighan</cite>
       </section>
       <section id="projects" class="projects">
         <h2>Projects</h2>
         <article>
-          <h3>Project 1</h3>
-          <p>Este projeto parararaa</p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
+          <div class="project-content">
+            <h3>Project 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              voluptatum facere laboriosam ex corporis enim ullam aliquam atque
+              ad voluptatibus voluptas nobis, quo explicabo nam alias aut
+              accusamus? Praesentium, voluptatibus.
+            </p>
+            <a href="https://github.com/IezaSouza/Forms" target="_blank"
+              >Source Code</a
+            >
+            <a href="https://iezasouza.github.io/Forms/" target="_blank"
+              >View Project</a
+            >
+          </div>
           <img src="img/img1.png" alt="" />
         </article>
         <article>
-          <h3>Project 2</h3>
-          <p>Este projeto parararaa</p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
+          <div class="project-content">
+            <h3>Project 2</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              libero officia. Voluptate excepturi eaque doloremque totam sed?
+              Vitae ipsam quibusdam dicta magnam nesciunt sed temporibus cum rem
+              pariatur, a consectetur.
+            </p>
+            <a href="https://github.com/IezaSouza/Tables" target="_blank"
+              >Source Code</a
+            >
+            <a href="https://iezasouza.github.io/Tables/" target="_blank"
+              >View Project</a
+            >
+          </div>
           <img src="img/img1.png" alt="" />
         </article>
         <article>
-          <h3>Project 3</h3>
-          <p>Este projeto parararaa</p>
-          <a href="">Source Code</a>
-          <a href="">View Project</a>
+          <div class="project-content">
+            <h3>Project 3</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus quo commodi veniam tempore fuga, totam eaque rerum
+              nihil impedit officia porro, ullam voluptate minus. Facilis
+              explicabo optio enim excepturi fugit!
+            </p>
+            <a href="https://github.com/IezaSouza/Portfolio" target="_blank"
+              >Source Code</a
+            >
+            <a href="https://iezasouza.github.io/Portfolio/" target="_blank"
+              >View Project</a
+            >
+          </div>
           <img src="img/img1.png" alt="" />
         </article>
       </section>
