--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Hello, my name is Ieza Souza <br />
         I’m a Full Stack Web Developer
       </h1>
-      <a href="#contact">Find out more</a>
+      <a href="#contact" class="buttonsource">Find out more</a>
     </header>
     <main>
       <section id="about" class="about">
@@ -39,7 +39,10 @@
             beatae quibusdam perspiciatis neque tempora eum ut id saepe dolores!
             Tempora, cumque nihil!
           </p>
-          <a href="Ieza Souza Curriculo English.pdf" target="_blank"
+          <a
+            href="Ieza Souza Curriculo English.pdf"
+            target="_blank"
+            class="buttonmail"
             >View resume</a
           >
 
@@ -60,10 +63,16 @@
               ad voluptatibus voluptas nobis, quo explicabo nam alias aut
               accusamus? Praesentium, voluptatibus.
             </p>
-            <a href="https://github.com/IezaSouza/Forms" target="_blank"
+            <a
+              href="https://github.com/IezaSouza/Forms"
+              target="_blank"
+              class="buttonsource"
               >Source Code</a
             >
-            <a href="https://iezasouza.github.io/Forms/" target="_blank"
+            <a
+              href="https://iezasouza.github.io/Forms/"
+              target="_blank"
+              class="buttonview"
               >View Project</a
             >
           </div>
@@ -78,10 +87,16 @@
               Vitae ipsam quibusdam dicta magnam nesciunt sed temporibus cum rem
               pariatur, a consectetur.
             </p>
-            <a href="https://github.com/IezaSouza/Tables" target="_blank"
+            <a
+              href="https://github.com/IezaSouza/Tables"
+              target="_blank"
+              class="buttonsource"
               >Source Code</a
             >
-            <a href="https://iezasouza.github.io/Tables/" target="_blank"
+            <a
+              href="https://iezasouza.github.io/Tables/"
+              target="_blank"
+              class="buttonview"
               >View Project</a
             >
           </div>
@@ -96,10 +111,16 @@
               nihil impedit officia porro, ullam voluptate minus. Facilis
               explicabo optio enim excepturi fugit!
             </p>
-            <a href="https://github.com/IezaSouza/Portfolio" target="_blank"
+            <a
+              href="https://github.com/IezaSouza/Portfolio"
+              target="_blank"
+              class="buttonsource"
               >Source Code</a
             >
-            <a href="https://iezasouza.github.io/Portfolio/" target="_blank"
+            <a
+              href="https://iezasouza.github.io/Portfolio/"
+              target="_blank"
+              class="buttonview"
               >View Project</a
             >
           </div>
@@ -107,22 +128,54 @@
         </article>
       </section>
       <section id="contact" class="contact">
-        <h2>Contact</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-          minus ipsum quasi non quod explicabo reprehenderit optio unde, ab
-          sapiente ratione rerum in ducimus. Quidem praesentium molestiae
-          distinctio minima! Facilis.
-        </p>
-        <a href="mailto:iezamalafaia@icloud.com">Let's Talk</a>
+        <div class="contact-background">
+          <h2>Contact</h2>
+          <p class="text-contact">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            minus ipsum quasi non quod explicabo reprehenderit optio unde, ab
+            sapiente ratione rerum in ducimus. Quidem praesentium molestiae
+            distinctio minima! Facilis.
+          </p>
+          <a href="mailto:iezamalafaia@icloud.com" class="buttonmail"
+            >Let's Talk</a
+          >
+        </div>
       </section>
     </main>
     <footer>
       <ul>
-        <li><a href="https://pt.linkedin.com/">Linkedin</a></li>
-        <li><a href="https://github.com/IezaSouza">Github</a></li>
-        <li><a href="https://twitter.com/?lang=pt">Twitter</a></li>
-        <li><a href="https://dev.to/">Dev.to</a></li>
+        <li>
+          <a href="https://pt.linkedin.com/" target="_blank"
+            ><img
+              src="img/linkedin.png"
+              alt="icone linkedin"
+              class="icones-socialmedia"
+          /></a>
+        </li>
+        <li>
+          <a href="https://github.com/IezaSouza" target="_blank"
+            ><img
+              src="img/github.png"
+              alt="icone github"
+              class="icones-socialmedia"
+          /></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/?lang=pt" target="_blank"
+            ><img
+              src="img/twitter.png"
+              alt="icone twitter"
+              class="icones-socialmedia"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><img
+              src="img/instagram (1).png"
+              alt="icone instagram"
+              class="icones-socialmedia"
+          /></a>
+        </li>
       </ul>
       <p>@ 2023 - Portfolio Design by Ieza Souza</p>
     </footer>
