--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       <div class="headerlogo">
         <img src="img/programming (1).png" alt="logo" class="headerlogo" />
       </div>
+      <div>
+        <a href="./pages/blog.html" target="_blank" class="buttonheader"
+          >Blog</a
+        >
+        <a href="./pages/contactme.html" target="_blank" class="buttonheader"
+          >Message Me</a
+        >
+      </div>
     </div>
     <header>
       <h1 class="titulo1">
