add pages styles

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
     </main>
     <footer>
-      <ul>
+      <ul class="footer-links">
         <li>
           <a href="https://pt.linkedin.com/" target="_blank"
             ><img
