--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Blog</title>
   </head>
-  <body></body>
+  <body>
+    <div class="headercontent">
+      <div class="headerlogo">
+        <img src="../img/programming (1).png" alt="logo" class="headerlogo" />
+      </div>
+      <div>
+        <a href="./pages/blog.html" target="_blank" class="buttonheader"
+          >Blog</a
+        >
+        <a href="./pages/contactme.html" target="_blank" class="buttonheader"
+          >Message Me</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
