--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           alt="IezaSouza"
         />
         <div class="aboutme">
-          <h2>About Me</h2>
+          <h2 class="heading">About Me</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
             hic perferendis consectetur amet minus, blanditiis dicta culpa
