add package.json and install sass

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
       rel="stylesheet"
     />
+    <script src="./script.js" defer></script>
     <title>Portfolio Ieza Souza</title>
   </head>
   <body>
