--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
       rel="stylesheet"
@@ -15,14 +15,14 @@
   <body>
     <div class="headercontent">
       <div class="headerlogo">
-        <img src="img/programming (1).png" alt="logo" class="headerlogo" />
+        <img src="img/programming.png" alt="logo" class="headerlogo" />
       </div>
       <div>
         <a href="./pages/blog.html" target="_blank" class="buttonheader"
-          >Blog</a
+          ><b>Blog</b></a
         >
         <a href="./pages/contactme.html" target="_blank" class="buttonheader"
-          >Message Me</a
+          ><b>Message Me</b></a
         >
       </div>
     </div>
@@ -31,22 +31,25 @@
         Hello, my name is Ieza Souza <br />
         I’m a Full Stack Web Developer
       </h1>
-      <a href="#contact" class="buttonsource">Find out more</a>
+      <a href="#contact" class="buttonsource"><b> Find out more</b></a>
     </header>
     <main>
       <section id="about" class="about">
-        <img
-          class="img-bio"
-          src="img/photo-1573495628363-04667cedc587.png"
-          alt="IezaSouza"
-        />
+        <img class="img-bio" src="./img/IMG_5473.JPEG" alt="IezaSouza" />
         <div class="aboutme">
           <h2 class="heading">About Me</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-            hic perferendis consectetur amet minus, blanditiis dicta culpa
-            beatae quibusdam perspiciatis neque tempora eum ut id saepe dolores!
-            Tempora, cumque nihil!
+            I'm Ieza Souza, a Full Stack Web Developer <b>in the making</b>.
+            <br />
+            Currently enrolled in a Full Stack Web Development course at EDIT,
+            I'm on a dynamic journey to explore every facet of web development,
+            from front-end to back-end. My commitment to honing my skills and
+            knowledge drives me to create innovative and user-friendly web
+            applications. Join me in this coding adventure as we delve into the
+            ever-evolving world of web development.
+            <br />
+            <br />
+            Welcome to my portfolio!
           </p>
           <a
             href="Ieza Souza Curriculo English.pdf"
@@ -65,12 +68,10 @@
         <h2>Projects</h2>
         <article>
           <div class="project-content">
-            <h3>Project 1</h3>
+            <h3>Forms Project</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              voluptatum facere laboriosam ex corporis enim ullam aliquam atque
-              ad voluptatibus voluptas nobis, quo explicabo nam alias aut
-              accusamus? Praesentium, voluptatibus.
+              This project seamlessly combines HTML and CSS to create efficient
+              forms for smooth data input and interaction.
             </p>
             <a
               href="https://github.com/IezaSouza/Forms"
@@ -85,16 +86,14 @@
               >View Project</a
             >
           </div>
-          <img src="img/img1.png" alt="" />
+          <img class="projects-img" src="./img/Forms.png" alt="" />
         </article>
         <article>
           <div class="project-content">
-            <h3>Project 2</h3>
+            <h3>Tables Project</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              libero officia. Voluptate excepturi eaque doloremque totam sed?
-              Vitae ipsam quibusdam dicta magnam nesciunt sed temporibus cum rem
-              pariatur, a consectetur.
+              This tables project organizes data with HTML and CSS. To make
+              information look great and easy to manage.
             </p>
             <a
               href="https://github.com/IezaSouza/Tables"
@@ -109,9 +108,9 @@
               >View Project</a
             >
           </div>
-          <img src="img/img1.png" alt="" />
+          <img class="projects-img" src="./img/Tables.png" alt="" />
         </article>
-        <article>
+        <!--<article>
           <div class="project-content">
             <h3>Project 3</h3>
             <p>
@@ -133,8 +132,8 @@
               >View Project</a
             >
           </div>
-          <img src="img/img1.png" alt="" />
-        </article>
+          <img class="projects-img" src="./img/PortfolioPreview.png" alt="" />
+        </article> -->
       </section>
       <section id="contact" class="contact">
         <div class="contact-background">
