--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
+    <link rel="icon" href="../favicon.ico" />
     <link rel="stylesheet" href="../styles/css/styles.css" />
-    <title>Blog</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../script.js" defer></script>
   </head>
   <body>
     <div class="headercontent">
